fixing overflow on safari

--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,13 @@
 
 html {
     font-size: 16px;
+    overflow-x: hidden;
 }
 body {
     font-family: "Open Sans", sans-serif;
     position: relative;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 :root {
